--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="v_player">
+  <link rel="icon" href="icons/Icon-192.png" sizes="192x192" type="image/png">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
